--- a/cv/index.html
+++ b/cv/index.html
@@ -91,6 +91,6 @@
   <div></div>
 </div> -->
 <div style="margin-bottom: 300px; ;"></div>
-<script src="https://voislav-vpotoke.github.io/oum/cv/js/main.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
