--- a/modal/index.html
+++ b/modal/index.html
@@ -9,19 +9,19 @@
 <a href="#" class="js-open-modal" data-modal="1">Записаться</a>
 <link rel="stylesheet" href="styles.css">
 
-
+</head>
 <!-- Модальное окно -->
 
 <div class="modal" data-modal="1">
    <!--   Svg иконка для закрытия окна  -->
    <svg class="modal__cross js-modal-close" xmlns="http://www.w3.org/2000/svg"               viewBox="0 0 24 24"><path d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"/></svg>
-   <a href="https://forms.yandex.ru/u/5fb4f8a46c7ed6f495e023a6/" class="button">Записаться</a>
+   <a href="https://forms.yandex.ru/u/5fb4f8a46c7ed6f495e023a6/" class="button">ЖМИ СЮДА</a>
 </div>
 
 <!-- Подложка под модальным окном -->
 <div class="overlay js-overlay-modal"></div>
 
-<script src="https://voislav-vpotoke.github.io/om/modal/js-modal.js"></script>
+<script src="js-modal.js"></script>
 
 </body>
 </html>
