--- a/cv/index.html
+++ b/cv/index.html
@@ -72,7 +72,7 @@
     </form>
   
      
-<hr size="5" noshade width="750" color="blue" />
+<hr size="5" noshade width="750" color="blue">
  
 <button id="myBtn">Записаться на консультацию</button>
  </a>
