--- a/modal/index.html
+++ b/modal/index.html
@@ -8,7 +8,7 @@
 
 <a href="#" class="js-open-modal" data-modal="1">Записаться</a>
 <link rel="stylesheet" href="styles.css">
-
+<title>modal</title>
 </head>
 <!-- Модальное окно -->
 
