--- a/learn/index.html
+++ b/learn/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>learn</title>
 </head>
 <body>
-    <div class="container">
-        <h2 id="title">КОФЕ</h2>
-        <p>Кофе — это удивительный напиток, который согревает весь мир.</p>
-      </div>
+    
+    <script src="main.js"></script>
 </body>
 </html>
