--- a/learn/index.html
+++ b/learn/index.html
@@ -7,7 +7,14 @@
     <title>learn</title>
 </head>
 <body>
-    
+
+    <div id="app">
+        <span @click="title'Text'">Text</span>
+        <p>{{ title }}</p>
+
+    </div>
+
+    <script src="https://unpkg.com/vue@next"></script>
     <script src="main.js"></script>
 </body>
 </html>
